--- a/src/main/resources/static/FragmentsCSS/styles.css
+++ b/src/main/resources/static/FragmentsCSS/styles.css
@@ -15,7 +15,7 @@ body {
     background: #eee;
 }
 
-header {
+#web-header {
     height: 100%;
     width: 22rem;
     position: fixed;
@@ -46,12 +46,16 @@ header {
         width: 100%;
         height: 15%;
         display: flex;
-        justify-content: center;
         position: relative;
+        justify-content: center;
+        align-items: center;
 
         img {
-            height: 100%;
+            height: 70%;
             object-fit: cover;
+            background: #eee;
+            padding: 0.5rem;
+            border-radius: 0.5rem;
         }
     }
 
@@ -60,45 +64,37 @@ header {
         width: 100%;
         height: calc(85% - 4rem);
         position: relative;
-        background: rgb(0, 194, 194);
+        background: #35607e;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         color: #eee;
         font-weight: 400;
-        font-size: 1.2rem;
-
+        font-size: 1.4rem;
+        
         ul {
             display: flex;
             flex-direction: column;
-            gap: 1.4rem;
-
-            section h1 {
-                position: relative;
-
-                &::before {
-                    content: "•";
-                    position: absolute;
-                    left: -1rem;
-                }
-            }
-
+            gap: 1rem;
+            
             li {
                 display: flex;
-                height: 1.8rem;
+                height: 1.5rem;
+                margin-bottom: 0.3rem;
                 overflow: hidden;
                 flex-direction: column;
                 cursor: pointer;
                 width: fit-content;
-                gap: 0.5rem;
-
+                
                 span {
+                    font-family: math !important;
                     transition: all ease 0.2s;
+                    /* background: red; */
                 }
 
                 &:hover {
                     span {
-                        transform: translateY(-2.3rem);
+                        transform: translateY(-1.7rem);
                     }
                 }
             }
@@ -130,7 +126,7 @@ header {
     }
 }
 
-main {
+#web-main {
     width: calc(100% - 22rem);
     position: absolute;
     right: 0;
@@ -253,7 +249,7 @@ main {
             table {
                 width: 100%;
                 border-collapse: collapse;
-                font-size: 1.5rem;
+                font-size: 1.2rem;
 
                 thead {
                     background: snow;
