--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -79,7 +79,7 @@
                     <h1>Individual Course</h1>
                     <p>Basic Computer, Excel, Tally, C / C++, Java, Python & more..</p>
 
-                    <a th:href= "@{/form}">
+                    <a th:href= "@{/Indi_form}">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -88,7 +88,7 @@
                     <h1>Full Stack</h1>
                     <p>Java FullStack, MERN Stack, MEAN Stack..</p>
                     <p></p>
-                    <a href="/full-stack">
+                    <a th:href= "@{/Full_form}">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -96,7 +96,7 @@
                 <div id="basic" class="certificate">
                     <h1>Computer Basics</h1>
                     <p>Computer Basics, Excel Basic, Excel Advance, Tally..</p>
-                    <a href="/computer-basics">
+                    <a th:href= "@{/Basic_form}">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -117,7 +117,7 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td>Sarthak</td>
+                            <td></td>
                             <td>1234567890</td>
                             <td>
                                 <a href="/view">
@@ -127,150 +127,9 @@
                                     <button>Download</button>
                                 </a>
                             </td>
+
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>John</td>
-                            <td>0987654321</td>
-                            <td>
-                                <a href="/view">
-                                    <button>View</button>
-                                </a>
-                                <a href="/download">
-                                    <button>Download</button>
-                                </a>
-                            </td>
-                        </tr>
+                       
                     </tbody>
                 </table>
             </div>
