--- a/src/main/resources/static/FragmentsCSS/styles.css
+++ b/src/main/resources/static/FragmentsCSS/styles.css
@@ -71,12 +71,12 @@ body {
         color: #eee;
         font-weight: 400;
         font-size: 1.4rem;
-        
+
         ul {
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            
+
             li {
                 display: flex;
                 height: 1.5rem;
@@ -85,7 +85,7 @@ body {
                 flex-direction: column;
                 cursor: pointer;
                 width: fit-content;
-                
+
                 span {
                     font-family: math !important;
                     transition: all ease 0.2s;
@@ -159,6 +159,7 @@ body {
     #users {
         width: 100%;
         background: #34D1B7;
+        background: #35607e;
         border-radius: 0.5rem;
         padding: 1rem 1.5rem;
         display: flex;
@@ -204,10 +205,10 @@ body {
                     scale: 0.8;
 
                     h1 {
-                        border: 0.1rem solid #34D1B7;
+                        border: 0.1rem solid #0096fd;
                         padding: 1rem 2rem;
                         transition: all ease 0.3s;
-                        background: #34D1B7;
+                        background: #0096fd;
                         border-radius: 0.5rem;
                         color: snow !important;
                         box-shadow: 0.5rem 0.5rem 1.5rem #bebebe,
@@ -223,6 +224,10 @@ body {
                 }
             }
         }
+    }
+
+    #services {
+        background: #35607e;
     }
 
     #users {
@@ -258,7 +263,7 @@ body {
 
                     tr {
                         th {
-                            color: #34D1B7;
+                            color: #0096fd;
                             padding: 0.8rem;
                             text-align: left;
                             border: 0.1rem solid rgb(236, 236, 236);
@@ -284,7 +289,7 @@ body {
                                 padding: 0.5rem 1rem;
                                 font-size: 1rem;
                                 border: 0.1rem solid #eee;
-                                background: #34D1B7;
+                                background: #0096fd;
                                 transition: all ease 0.1s;
                                 cursor: pointer;
 
