--- a/src/main/resources/static/FragmentsCSS/styles.css
+++ b/src/main/resources/static/FragmentsCSS/styles.css
@@ -42,7 +42,7 @@ body {
     }
 
     figure {
-        background: rgb(0, 125, 167);
+        background: #4E6890;
         width: 100%;
         height: 15%;
         display: flex;
@@ -103,7 +103,8 @@ body {
 
     aside {
         padding: 2rem;
-        background: rgb(0, 125, 167);
+        /* background: rgb(0, 125, 167); */
+        background: #4E6890;
 
         button {
             width: 100%;
@@ -111,7 +112,8 @@ body {
             border: none;
             border-radius: 0.5rem;
             cursor: pointer;
-            background: rgb(0, 194, 194);
+            /* background: rgb(0, 194, 194); */
+            background: #0096FD;
             color: white;
             font-size: 1.2rem;
             font-weight: 500;
@@ -137,7 +139,8 @@ body {
     transition: all ease 0.5s;
 
     .menu {
-        color: #34D1B7;
+        /* color: #34D1B7; */
+        color: #35607e;
         font-size: 2rem;
         transition: all ease 0.5s;
         width: fit-content;
