--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" th:href="@{/FragmentsCSS/styles.css}">
+    <link rel="stylesheet" th:href="@{/FragmentsCSS/Fragments.css}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css}" rel="stylesheet" />
 </head>
 
