--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" th:href="@{/FragmentsCSS/styles.css}">
+    <link rel="stylesheet" th:href="@{/FragmentsCSS/Fragments.css}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css}" rel="stylesheet" />
 </head>
 
@@ -13,12 +13,12 @@
     <header id="web-header">
         <i class="close ri-close-large-line"></i>
         <figure>
-            <!-- <img src="./logo.webp" alt="404! Cannot Load Logo"> -->
+            <img th:src="@{/Images/logo.png}" alt="404! Cannot Load Logo">
         </figure>
         <nav>
             <ul type="none">
                 <section>
-                    <h1>Main :-</h1>
+                    <h1>Main</h1>
                     <li>
                         <span>Home</span>
                         <span>Home</span>
@@ -29,7 +29,7 @@
                     </li>
                 </section>
                 <section>
-                    <h1>Services :-</h1>
+                    <h1>Services</h1>
                     <li>
                         <span>Basic Computer</span>
                         <span>Basic Computer</span>
@@ -44,7 +44,7 @@
                     </li>
                 </section>
                 <section>
-                    <h1>How To :-</h1>
+                    <h1>How To</h1>
                     <li>
                         <span>Admin Login</span>
                         <span>Admin Login</span>
@@ -79,7 +79,7 @@
                     <h1>Individual Course</h1>
                     <p>Basic Computer, Excel, Tally, C / C++, Java, Python & more..</p>
 
-                    <a th:href= "@{/Indi_form}">
+                    <a th:href="@{/Indi_form}">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -88,7 +88,7 @@
                     <h1>Full Stack</h1>
                     <p>Java FullStack, MERN Stack, MEAN Stack..</p>
                     <p></p>
-                    <a th:href= "@{/Full_form}">
+                    <a th:href="@{/Full_form}">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -96,14 +96,14 @@
                 <div id="basic" class="certificate">
                     <h1>Computer Basics</h1>
                     <p>Computer Basics, Excel Basic, Excel Advance, Tally..</p>
-                    <a th:href= "@{/Basic_form}">
+                    <a th:href="@{/Basic_form}">
                         <h1>Register</h1>
                     </a>
                 </div>
             </div>
         </section>
         <section id="users">
-            <h1>Users..</h1>
+            <h1>Student Detail..</h1>
             <div class="table-container">
                 <table>
                     <thead>
@@ -117,7 +117,7 @@
                     <tbody>
                         <tr>
                             <td>1</td>
-                            <td></td>
+                            <td>Sarthak</td>
                             <td>1234567890</td>
                             <td>
                                 <a href="/view">
@@ -129,7 +129,7 @@
                             </td>
 
                         </tr>
-                       
+
                     </tbody>
                 </table>
             </div>
