--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" th:href="@{/FragmentsCSS/styles.css}">
+    <link rel="stylesheet" th:href="@{/FragmentsCSS/Fragments.css}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css}" rel="stylesheet" />
 </head>
 
@@ -18,7 +18,7 @@
         <nav>
             <ul type="none">
                 <section>
-                    <h1>Main :-</h1>
+                    <h1>Main</h1>
                     <li>
                         <span>Home</span>
                         <span>Home</span>
@@ -29,7 +29,7 @@
                     </li>
                 </section>
                 <section>
-                    <h1>Services :-</h1>
+                    <h1>Services</h1>
                     <li>
                         <span>Basic Computer</span>
                         <span>Basic Computer</span>
@@ -44,7 +44,7 @@
                     </li>
                 </section>
                 <section>
-                    <h1>How To :-</h1>
+                    <h1>How To</h1>
                     <li>
                         <span>Admin Login</span>
                         <span>Admin Login</span>
