--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -134,6 +134,14 @@
                 </table>
             </div>
         </section>
+        <section id="forms">
+            <a href="">
+                <i id="closeForm" class="ri-close-large-line"></i>
+            </a>
+            <div id="individual-course-form" class="form-wrapper"></div>
+            <div id="full-stack-form" class="form-wrapper"></div>
+            <div id="computer-basic-form" class="form-wrapper"></div>
+        </section>
     </main>
     <script src="/JS/script.js"></script>
 </body>
