--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -73,13 +73,11 @@
         <i class="menu ri-menu-2-line"></i>
         <section id="services">
             <h1>Course Certificates..</h1>
-
             <div id="certificates">
                 <div id="individual" class="certificate">
                     <h1>Individual Course</h1>
                     <p>Basic Computer, Excel, Tally, C / C++, Java, Python & more..</p>
-
-                    <a th:href="@{/Indi_form}">
+                    <a id="individual-course-button" href="#individual-course">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -88,7 +86,7 @@
                     <h1>Full Stack</h1>
                     <p>Java FullStack, MERN Stack, MEAN Stack..</p>
                     <p></p>
-                    <a th:href="@{/Full_form}">
+                    <a id="full-stack-button" href="#full-stack">
                         <h1>Register</h1>
                     </a>
                 </div>
@@ -96,7 +94,7 @@
                 <div id="basic" class="certificate">
                     <h1>Computer Basics</h1>
                     <p>Computer Basics, Excel Basic, Excel Advance, Tally..</p>
-                    <a th:href="@{/Basic_form}">
+                    <a id="computer-basic-button" href="#computer-basics">
                         <h1>Register</h1>
                     </a>
                 </div>
