--- a/src/main/resources/static/FragmentsCSS/Fragments.css
+++ b/src/main/resources/static/FragmentsCSS/Fragments.css
@@ -62,7 +62,8 @@ body {
     nav {
         padding: 2rem;
         width: 100%;
-        height: calc(85% - 4rem);
+        min-height: calc(85% - 4rem);
+        max-height: fit-content;
         position: relative;
         background: #35607e;
         display: flex;
@@ -314,7 +315,7 @@ body {
 #forms {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -323,9 +324,9 @@ body {
 
     &::before {
         content: '';
-        position: absolute;
+        position: fixed;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         background: rgba(0, 0, 0, 0.2);
         backdrop-filter: blur(0.5rem);
     }
@@ -343,7 +344,8 @@ body {
     #full-stack-form,
     #computer-basic-form {
         width: 40rem;
-        height: 100%;
+        min-height: 100%;
+        max-height: fit-content;
         display: none;
         position: absolute;
         z-index: 30;
