"Removed CoursesForm.css, test.css, and authenticationForm.css files. Updated Fragments.css to change nav height from min-height and max-height to height."

--- a/src/main/resources/static/FragmentsCSS/Fragments.css
+++ b/src/main/resources/static/FragmentsCSS/Fragments.css
@@ -62,8 +62,7 @@ body {
     nav {
         padding: 2rem;
         width: 100%;
-        min-height: calc(85% - 4rem);
-        max-height: fit-content;
+        height: calc(85% - 4rem);
         position: relative;
         background: #35607e;
         display: flex;
