--- a/src/main/resources/static/FragmentsCSS/Fragments.css
+++ b/src/main/resources/static/FragmentsCSS/Fragments.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -339,20 +339,87 @@ body {
         z-index: 100;
     }
 
-        #individual-course-form,
-        #full-stack-form,
-        #computer-basic-form {
-            width: 40rem;
-            height: 100%;
-            display: none;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
+    #individual-course-form,
+    #full-stack-form,
+    #computer-basic-form {
+        width: 40rem;
+        min-height: 100%;
+        max-height: fit-content;
+        display: none;
+        position: absolute;
+        z-index: 30;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 2rem;
+        background: #1092e9;
+
+        input::placeholder,
+        label {
+            color: #0078CA;
         }
 
-        #individual-course-form {
-            background: lightcoral;
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            align-items: center;
+            input-security: auto;
+
+            .input-wrap {
+                display: flex;
+                flex-direction: column;
+
+                label {
+                    font-size: 1.3rem;
+                    background: #fff;
+                    padding: 1rem 0 0 1rem;
+                    border-radius: 1rem 1rem 0 0;
+                    transform: translateY(0.2rem);
+                    background: #fff;
+                }
+            }
+
+            input,
+            select,
+            option {
+                font-size: 1.3rem;
+                width: 30rem;
+                padding: 1rem;
+                color: #000;
+                outline: none;
+                border: none;
+                border-radius: 1rem;
+                overflow: hidden;
+
+                &.input-date {
+                    padding: 0 1rem 1rem 1rem !important;
+                    border-radius: 0 0 1rem 1rem !important;
+                }
+            }
+
+            .submit {
+                width: 15rem;
+                cursor: pointer;
+
+                &:hover {
+                    filter: brightness(0.9);
+                }
+
+                &:active {
+                    filter: brightness(0.95);
+                }
+            }
         }
+    }
+
+    /* #individual-course-form {
+        background: lightcoral;
+
+        input::placeholder,
+        label {
+            color: lightcoral;
+        }
+    }
 
     #full-stack-form {
         background: #1092e9;
@@ -397,72 +464,4 @@ body {
             }
         }
     }
-}
-
-/* Fregment form ki css*/
-.body  
-{
-  background-color: #f0f0f0;
-  font-family: sans-serif;
-}
-
-.container {
-  background-color: #fff;
-  margin: 30px auto;
-  padding: 100px;
-  height: 465px;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-}
-
-.h1 {
-  text-align: center;
-  font-stretch: condensed;
-  font-weight: 100;
-  margin-top: -80px;
-  margin-bottom: 50px;
-}
-
-.label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.input
-{
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 30px;
-  border: 1px solid #9e9b9b;
-  border-radius: 5px;
-   font-size: larger;
-   box-sizing: border-box; 
-}
-
-input[type="date"]{font-size: x-large;}
-
-::placeholder
-{color: rgb(33, 32, 32);}
-
-.button {
-  background-color: #36bc3b;
-  color: rgb(248, 247, 247);
-  font-size: large;
-  padding: 15px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-left: 130px;
-  width: 40%;
-}
-.form
-{
-  margin-left: -30px;
-}
-
-.button:hover 
-{
-  background-color: #1b8521;
-  font-weight: bold;
 }
