--- a/src/main/resources/static/FragmentsCSS/Fragments.css
+++ b/src/main/resources/static/FragmentsCSS/Fragments.css
@@ -319,7 +319,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
-    /* display: none; */
+    display: none;
 
     &::before {
         content: '';
@@ -353,7 +353,7 @@ body {
         width: 40rem;
         min-height: 100%;
         max-height: fit-content;
-        /* display: none; */
+        display: none;
         position: absolute;
         z-index: 30;
         left: 50%;
