--- a/src/main/resources/static/FragmentsCSS/Fragments.css
+++ b/src/main/resources/static/FragmentsCSS/Fragments.css
@@ -239,7 +239,8 @@ body {
         flex-direction: column;
         gap: 1.4rem;
 
-        .table-container {
+        .table-container 
+        {
             width: 100%;
             overflow-x: auto;
             padding-right: .5rem;
@@ -269,7 +270,7 @@ body {
                             color: #0096fd;
                             padding: 0.8rem;
                             text-align: left;
-                            border: 0.1rem solid rgb(236, 236, 236);
+                            border: 0.1rem solid rgb(200, 197, 197);
                             text-align: center;
                         }
                     }
