--- a/src/main/resources/templates/Certificate/certificate.html
+++ b/src/main/resources/templates/Certificate/certificate.html
@@ -15,9 +15,9 @@
             <figure>
                 <img th:src="@{/Images/certificate-bg.jpg}" alt="Certificate Image">
                 <article>
-                    <h1>C & C++ Language</h1>
-                    <p>Completed By <b>Sarthak Parulekar</b> From <b>24/04/2024</b> to <b>30/05/2024</b> With Good
-                        Proficiency Achievement.</p>
+                    <h1 th:text="${obj.course}"></h1>
+                    <p>Completed By <b th:text="${obj.name}"></b> From <b th:text="${obj.strating_date}"></b> to <b th:text="${obj.ending_date}"></b> With Good
+                       Proficiency Achievement.</p>
                     <p>Congratulations On a Job Well Done!</p>
                     <footer>
                         <p>Date of Issue</p>
