"Updated certificate.css and certificate.html files with new styles and HTML structure for date of issue and signature sections."

--- a/src/main/resources/static/CSS/certificate.css
+++ b/src/main/resources/static/CSS/certificate.css
@@ -75,6 +75,21 @@ main {
                 width: 100%;
                 display: flex;
                 justify-content: space-between;
+
+                .date-of-issue {
+                    display: flex;
+                    flex-direction: column;
+
+                    .text {
+                        font-size: 1.2rem;
+                    }
+                }
+
+                .signature {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
             }
         }
     }
